# Pencilmake

./: Cargo.toml  README.md
src/: main.rs
src/core/: commandpool.rs  device.rs  mod.rs  pipeline.rs  shader.rs  swapchain.rs  window.rs
src/core/object/: mod.rs  model.rs  vertex.rs
src/shaders/: default.vert
