[package]
name = "Pencilmake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.71"
ash = { version = "0.37.2", features = ["linked", "debug"] }
ash-window = "0.12.0"
gpu-allocator = "0.22.0"
raw-window-handle = { version = "0.5.2", features = ["alloc"] }
tobj = "4.0.0"
vk-shader-macros = "0.2.8"
winit = "0.28.5"
